release 1.0.2 (2009-01/02)
- Fixed issue 80
  https://jersey.dev.java.net/issues/show_bug.cgi?id=80
  The class and package registration mechanisms for root resource classes
  and providers works correctly on the JBoss 5.x app server.
- The ResourceDoclet (generating a resourcedoc file for extended WADL) moved
  from the maven-wadl-plugin to the wadl-resourcedoc-doclet module. If you're
  using extended wadl you need to change the docletArtifact/artifactId of the
  maven-javadoc-plugin configuration from maven-wadl-plugin to 
  wadl-resourcedoc-doclet.
- Include Jersey Client API with Apache HTTP client.
  Refer to the module:
        <groupId>com.sun.jersey.contribs</groupId>
        <artifactId>jersey-apache-client</artifactId>
- Fixed issue 177
  https://jersey.dev.java.net/issues/show_bug.cgi?id=177
  The method Client.getProviders() can be used to get the Providers instance
  utilized by the client.
- Fixed issue 183
  https://jersey.dev.java.net/issues/show_bug.cgi?id=183
  Query parameters may be built for a WebResource as follows:
    r.queryParam("a", "foo").queryParam("b", "bar").get(String.class)
- Fixed issue 196
  https://jersey.dev.java.net/issues/show_bug.cgi?id=196
  Removal of filters, using Filterable.removeFilter, no longer causes an
  exception.
- Fixed issue 196
  https://jersey.dev.java.net/issues/show_bug.cgi?id=196
  Conversion of an Object that is a header value will use the Object.toString()
  method if a header delegate cannot be found. For example,
     return Response.noContent().
                    header("X-INTEGER", 1).
                    build();
  will build a 204 response with a header "X-INTEGER: 1".
- jersey-archive module added to provide archive files that include the
  set of Jersey jars and JavaDoc. See:
  http://download.java.net/maven/2/com/sun/jersey/jersey-archive/
- Fixed issue 191
  https://jersey.dev.java.net/issues/show_bug.cgi?id=191
  ResourceConfig.isProviderClass and ResourceConfig.isRootResourceClass return